--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 table {
     margin: 50px auto;
     font-size: 4rem;
+    border: 2px solid black;
+    font-weight: 400;
 }
 
-table, th, td {
-    padding: 10px;
+th, td {
+    padding: 13px;
     border: 2px solid black;
     font-weight: 400;
 }
